# multi-agent-engine

./: .gitignore  Cargo.toml  README.md
benches/: Cargo.toml  README.md  core.rs  gpu.rs  multi_agent_engine.rs  runtime.rs  sync.rs
crates/multi-agent-engine-core/: Cargo.toml  README.md
crates/multi-agent-engine-core/src/: error.rs  lib.rs  result.rs
crates/multi-agent-engine-gpu/: Cargo.toml  README.md
crates/multi-agent-engine-runtime/: Cargo.toml  README.md
crates/multi-agent-engine-sync/: Cargo.toml  README.md
docs/: core.md  documentation.md  gpu.md  runtime.md  sync.md
examples/: Cargo.toml  README.md  getting_started.rs
multi-agent-engine/: Cargo.toml
multi-agent-engine/src/: controller.rs  lib.rs  multi_agent_engine.rs  shared.rs  simulator.rs
multi-agent-engine/src/message/: mod.rs  queue.rs  receiver.rs  sender.rs
src/: controller.rs  multi_agent_engine.rs  simulator.rs
src/message/: queue.rs  receiver.rs  sender.rs
src/multi-agent-engine/: Cargo.toml
tests/: test_multi_agent_engine.rs
