# Copyright 2025 Nicolas Spijkerman
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "multi-agent-engine"
version.workspace = true
authors.workspace = true
categories.workspace = true
description = "A concurrent library for building multi-agent simulators with lock-free CPU/GPU hybrid execution."
documentation = "https://github.com/NickSpyker/multi-agent-engine/blob/main/docs/multi-agent-engine.md"
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
publish.workspace = true
readme.workspace = true
repository.workspace = true

[features]
default = []

[dependencies]
multi-agent-engine-core.workspace = true
multi-agent-engine-gpu.workspace = true
crossbeam-channel.workspace = true
arc-swap.workspace = true
